--- a/package.json
+++ b/package.json
@@ -6,15 +6,13 @@
   "scripts": {
     "start": "node server.js",
     "server": "nodemon server.js",
-    "client": "npm start --prefix client",
-    "client:build": "npm run build --prefix client",
-    "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "build": "npm install --prefix client && npm run build --prefix client"
+    "client": "npm start  --prefix ./client",
+    "dev": "concurrently \"npm run start\" \"npm run client \""
   },
   "keywords": [],
-  "author": "Akash Sharma",
+  "author": "akash sharma",
   "license": "ISC",
-  "description": "MERN E-commerce App",
+  "description": "",
   "dependencies": {
     "bcrypt": "^5.1.1",
     "braintree": "^3.26.0",
@@ -30,6 +28,8 @@
     "morgan": "^1.10.0",
     "nodemon": "^3.1.7",
     "razorpay": "^2.9.5",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "slugify": "^1.6.6",
     "uuid": "^11.0.5"
   }
