--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "start": "node server.js",
-    "server": "nodemon server.js",
-    "client": "npm start  --prefix ./client",
-    "dev": "concurrently \"npm run start\" \"npm run client \""
+   "start": "react-scripts start",
+    "build": "react-scripts build"
+   
+
   },
   "keywords": [],
   "author": "akash sharma",
